<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">nmedia</string>
    <string name="greeting">NMedia!</string>
    <string name="author_description">Author avatar</string>
    <string name="author">Netology. University of Internet Professions</string>
    <string name="date">may 21 at 18:36</string>
    <string name="content">Hi, this is a new Netology! Once Netology began with intensive courses in online marketing. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes - http://ntelo.gy/fyb</string>
    <string name="sum_likes">10</string>
    <string name="sum_share">5</string>
    <string name="sum_views">5</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_cancel">Edit cancel</string>
    <string name="chooser_share_post">Share Post</string>
    <string name="description_post_save">Save Post</string>
    <string name="add_post">Add post</string>
    <string name="video">Video link</string>
    <string name="play">Play video</string>


</resources>